@@ -37,11 +37,7 @@ import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
-import org.apache.solr.core.SolrCore;
 import org.apache.solr.handler.component.FacetComponent;
-import org.apache.solr.handler.component.SpatialHeatmapFacets;
-import org.apache.solr.handler.component.DateFacetProcessor;
-import org.apache.solr.handler.component.RangeFacetProcessor;
 import org.apache.solr.request.SimpleFacets;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
@@ -148,7 +144,7 @@ public class MoreLikeThisHandler extends RequestHandlerBase
         // Hold on to the interesting terms if relevant
         TermStyle termStyle = TermStyle.get(params.get(MoreLikeThisParams.INTERESTING_TERMS));
         List<InterestingTerm> interesting = (termStyle == TermStyle.NONE)
-            ? null : new ArrayList<InterestingTerm>(mlt.mlt.getMaxQueryTerms());
+            ? null : new ArrayList<>(mlt.mlt.getMaxQueryTerms());
 
         DocListAndSet mltDocs = null;
 
@@ -246,10 +242,10 @@ public class MoreLikeThisHandler extends RequestHandlerBase
         if (dbg == false) {//if it's true, we are doing everything anyway.
           String[] dbgParams = req.getParams().getParams(CommonParams.DEBUG);
           if (dbgParams != null) {
-            for (int i = 0; i < dbgParams.length; i++) {
-              if (dbgParams[i].equals(CommonParams.QUERY)) {
+            for (String dbgParam : dbgParams) {
+              if (dbgParam.equals(CommonParams.QUERY)) {
                 dbgQuery = true;
-              } else if (dbgParams[i].equals(CommonParams.RESULTS)) {
+              } else if (dbgParam.equals(CommonParams.RESULTS)) {
                 dbgResults = true;
               }
             }
@@ -381,10 +377,14 @@ public class MoreLikeThisHandler extends RequestHandlerBase
         newQ.setMinimumNumberShouldMatch(boostedQuery.getMinimumNumberShouldMatch());
         for (BooleanClause clause : boostedQuery) {
           Query q = clause.getQuery();
-          Float b = this.boostFields.get(((TermQuery) q).getTerm().field());
-          if (b != null) {
-            q = new BoostQuery(q, b);
+          float originalBoost = 1f;
+          if (q instanceof BoostQuery) {
+            BoostQuery bq = (BoostQuery) q;
+            q = bq.getQuery();
+            originalBoost = bq.getBoost();
           }
+          Float fieldBoost = boostFields.get(((TermQuery) q).getTerm().field());
+          q = ((fieldBoost != null) ? new BoostQuery(q, fieldBoost * originalBoost) : clause.getQuery());
           newQ.add(q, clause.getOccur());
         }
         boostedQuery = newQ.build();
@@ -485,7 +485,7 @@ public class MoreLikeThisHandler extends RequestHandlerBase
       for( BooleanClause o : clauses ) {
         Query q = o.getQuery();
         float boost = 1f;
-        if (query instanceof BoostQuery) {
+        if (q instanceof BoostQuery) {
           BoostQuery bq = (BoostQuery) q;
           q = bq.getQuery();
           boost = bq.getBoost();
